--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ python-dateutil>=2.8.2
 matplotlib>=3.7.0
 scikit-learn>=1.2.0
 email-validator>=2.0.0
+reportlab>=4.0.0        # For PDF generation
+Pillow>=10.0.0          # For image handling (used in logo/backgrounds if any)
+openpyxl>=3.1.0         # For reading/writing Excel files if XLSX download support exists
